--- a/templates/register.html
+++ b/templates/register.html
@@ -326,5 +326,6 @@
   {% include "_feedback.html" %}
   <script src="{{ url_for('static', filename='js/feedback.js') }}" defer></script>
   {% include "_legal_footer.html" %}
+  <script src="{{ url_for('static', filename='js/navbar.js') }}" defer></script>
 </body>
 </html>
